Fixed table alignment issue

--- a/budget/src/main/resources/static/css/style.css
+++ b/budget/src/main/resources/static/css/style.css
@@ -2,3 +2,8 @@
 {
     font-family: Inter, sans-serif;
 }
+
+td
+{
+    vertical-align: middle !important;
+}
